<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/add"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/delete"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/perfil"
            android:icon="@drawable/update"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/cerrarSesion"
            android:icon="@drawable/close"
            android:title="@string/cerrar" />
    </group>
</menu>